{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 107,
  "lineage": "360ac4be-b100-6d11-ee87-5908265e039e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:816678621138:instance/i-0ef035f9c49f93a14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef035f9c49f93a14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04bd43b875b37265e",
            "private_dns": "ip-172-31-84-218.ec2.internal",
            "private_ip": "172.31.84.218",
            "public_dns": "ec2-34-205-16-240.compute-1.amazonaws.com",
            "public_ip": "34.205.16.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c98442b4a5f2226b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-817c58a0",
            "tags": {
              "Name": "dev0"
            },
            "tags_all": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7839814ea8a35f4"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:816678621138:instance/i-0e97298fe38b5efc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e97298fe38b5efc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d104d1c8fc45ea07",
            "private_dns": "ip-172-31-87-217.ec2.internal",
            "private_ip": "172.31.87.217",
            "public_dns": "ec2-44-202-33-40.compute-1.amazonaws.com",
            "public_ip": "44.202.33.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca7e00c60fa71f76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-817c58a0",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7839814ea8a35f4"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:816678621138:instance/i-0485d651bb5a4b4fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0485d651bb5a4b4fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0315d00dde9787b2e",
            "private_dns": "ip-172-31-84-191.ec2.internal",
            "private_ip": "172.31.84.191",
            "public_dns": "ec2-54-152-228-207.compute-1.amazonaws.com",
            "public_ip": "54.152.228.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f60ef7cf79ebbcf1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-817c58a0",
            "tags": {
              "Name": "dev2"
            },
            "tags_all": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7839814ea8a35f4"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:816678621138:instance/i-06a2791f06c2d44ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a2791f06c2d44ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c659c40a5b489cc9",
            "private_dns": "ip-172-31-17-120.ec2.internal",
            "private_ip": "172.31.17.120",
            "public_dns": "ec2-18-212-98-6.compute-1.amazonaws.com",
            "public_ip": "18.212.98.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029c5af33b3f6067d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-34688678",
            "tags": {
              "Name": "dev4"
            },
            "tags_all": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7839814ea8a35f4"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:816678621138:instance/i-00000f3606e196eee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00000f3606e196eee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01fbfed8b1f9fcd5c",
            "private_dns": "ip-172-31-95-74.ec2.internal",
            "private_ip": "172.31.95.74",
            "public_dns": "ec2-52-90-221-1.compute-1.amazonaws.com",
            "public_ip": "52.90.221.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0301f6c313c7230e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-817c58a0",
            "tags": {
              "Name": "dev5"
            },
            "tags_all": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b7839814ea8a35f4"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:816678621138:instance/i-0cdd406a4c2327f93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdd406a4c2327f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b3301e004302f20",
            "private_dns": "ip-172-31-20-149.us-east-2.compute.internal",
            "private_ip": "172.31.20.149",
            "public_dns": "ec2-18-220-246-72.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.246.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab83c229fad60688",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a7fb9e7",
            "tags": {
              "Name": "dev6"
            },
            "tags_all": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081ea7b65f73e9cd8"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-us-east-2",
            "aws_dynamodb_table.dynamodb-homologacao"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:816678621138:instance/i-0c56bb10f2a04110c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c56bb10f2a04110c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f1548ca9cfb202f",
            "private_dns": "ip-172-31-21-181.us-east-2.compute.internal",
            "private_ip": "172.31.21.181",
            "public_dns": "ec2-3-135-19-175.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.19.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8c92a14eaa289a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a7fb9e7",
            "tags": {
              "Name": "dev7"
            },
            "tags_all": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081ea7b65f73e9cd8"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:security-group/sg-0b7839814ea8a35f4",
            "description": "Permite o acesso SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.22.233/32",
                  "45.177.153.89/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0b7839814ea8a35f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.177.153.89/32"
                ],
                "description": "SSH da VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "816678621138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permite_ssh"
            },
            "tags_all": {
              "Name": "permite_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-b20b61cf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:816678621138:security-group/sg-081ea7b65f73e9cd8",
            "description": "Permite o acesso SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.22.233/32",
                  "45.177.153.89/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-081ea7b65f73e9cd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.22.233/32",
                  "45.177.153.89/32"
                ],
                "description": "SSH da VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "816678621138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "permite_ssh"
            },
            "tags_all": {
              "Name": "permite_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c99fffa2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}